Fixed some IE bugs; aligned the 'General Inquiries' contact info with the other contacts

--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -14,10 +14,7 @@ dd {
 
 h3 {
   margin-bottom: 0;
-}
-
-#overview {
-  margin-left: 250px;
+  margin-left: 220px;
 }
 
 #main dl {
