--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -1,6 +1,21 @@
+#logo {
+  margin-top: 2em;
+}
+
 #main {
   position: absolute;
   left: 5%;
   top: 200px;
   width: 900px;
 }
+
+/* vaccine.html */
+#main #technicalDesign {
+  margin-top: 5em;
+}
+
+/* contact.html */
+#main h3 {
+  margin-left: 230px;
+}
+
